new jekyll site

--- a/framework/layouts/samuel/index.html
+++ b/framework/layouts/samuel/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--[if IE 9]>
+<!frameworkf IE 9]>
 <html class="ie9" lang="en">    <![endif]-->
-<!--[if IE 8]>
+<!frameworkf IE 8]>
 <html class="ie8" lang="en">    <![endif]-->
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
