--- a/framework/layouts/samuel/feedback.html
+++ b/framework/layouts/samuel/feedback.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--[if IE 9]>
+<!frameworkf IE 9]>
 <html class="ie9" lang="en">    <![endif]-->
-<!--[if IE 8]>
+<!frameworkf IE 8]>
 <html class="ie8" lang="en">    <![endif]-->
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name=viewport content="width=device-width, initial-scale=1">
 
-   <title>Gridus vCard | Contacts</title>
+   <title>Gridus vCard | Feedback</title>
 
    <meta name="description" content="Gridus vCard HTML Template is the professional responsive personal website template, based on the latest Bootstrap 3">
    <meta name="keywords" content="html5, template, website, responsive, bootstrap">
@@ -50,7 +50,7 @@
             <div class="row nopadding name">
                <div class="col-md-10 name-title"><h1 class="font-accident-two-extralight">Samuel Anderson</h1></div>
                <div class="col-md-2 nopadding name-pdf">
-                  <a href="contacts.html#" class="hvr-sweep-to-right"><i class="flaticon-download149" title="Download CV.pdf"></i></a>
+                  <a href="feedback.html#" class="hvr-sweep-to-right"><i class="flaticon-download149" title="Download CV.pdf"></i></a>
                </div>
             </div>
             <div class="row nopadding position">
@@ -69,7 +69,7 @@
 
                </div>
                <div class="col-md-2 nopadding pdf">
-                  <a href="contacts.html#" class="hvr-sweep-to-right"><i class="flaticon-behance7" title="My Behance Portfolio"></i></a>
+                  <a href="feedback.html#" class="hvr-sweep-to-right"><i class="flaticon-behance7" title="My Behance Portfolio"></i></a>
                </div>
             </div>
             <!-- /Name-Position -->
@@ -107,15 +107,15 @@
 <!-- Container -->
 <div class="content-wrap">
 
-   <div id="contacts" class="inner-content">
+   <div id="feedback" class="inner-content">
 
-      <section id="page-title" class="inner-section ui-menu-color04">
+      <section id="page-title" class="inner-section ui-menu-color05">
          <div class="container-fluid nopadding">
             <h2 class="font-accident-two-bold color01"
                 data-animation-origin="right"
                 data-animation-duration="400"
                 data-animation-delay="100"
-                data-animation-distance="50px">Contacts</h2>
+                data-animation-distance="50px">Feedback</h2>
             <h4 class="font-accident-two-light color01 uppercase subtitle"
                 data-animation-origin="right"
                 data-animation-duration="400"
@@ -131,70 +131,147 @@
          </div>
       </section>
 
-      <section id="contacts-data" class="inner-block">
+      <!-- Feedback Block -->
+      <section class="inner-section feedback feedback-light" data-section="feedback">
+
          <div class="container-fluid nopadding">
-            <div class="dividewhite8"></div>
+
             <div class="row">
-               <div class="col-md-6"
-                    data-animation-origin="right"
+
+               <div class=""
+                    data-animation-origin="top"
                     data-animation-duration="500"
-                    data-animation-delay="500"
+                    data-animation-delay="400"
                     data-animation-distance="25px">
-                  <div class="row">
-                     <div class="col-sm-2"><span class="font-accident-two-bold uppercase">Address:</span></div>
-                     <div class="col-sm-10"><p class="small">12234 Direct Drive, Daytona Beach, Fl USA</p></div>
-                  </div>
-                  <div class="row">
-                     <div class="col-sm-2"><span class="font-accident-two-bold uppercase">Phone:</span></div>
-                     <div class="col-sm-10"><p class="small">1 234 567-64-35</p></div>
-                  </div>
-                  <div class="row">
-                     <div class="col-sm-2"><span class="font-accident-two-bold uppercase">Skype:</span></div>
-                     <div class="col-sm-10"><p class="small">@samanderson</p></div>
-                  </div>
+                  <div class="dividewhite2"></div>
+                  <h3 class="font-accident-two-normal uppercase text-center">Drop Us a Line</h3>
+                  <h5 class="font-accident-two-normal uppercase text-center subtitle">Working hard and making the success</h5>
+                  <div class="dividewhite1"></div>
+                  <p class="small fontcolor-medium text-center">
+                     Customize your website as you want using different colors and 100% free fonts. Build it from pieces <br>and
+                     blocks as simple as Lego. Gridus Website Template is fully responsive, <br>looks and works perfect on any device.
+                  </p>
                </div>
-               <div class="col-md-6"
-                    data-animation-origin="right"
+
+               <div class="col-md-2">&nbsp;</div>
+               <div class="col-md-8 e-centered"
+                    data-animation-origin="top"
                     data-animation-duration="500"
-                    data-animation-delay="800"
+                    data-animation-delay="600"
                     data-animation-distance="25px">
-                  <div class="row">
-                     <div class="col-sm-2"><span class="font-accident-two-bold uppercase">Twitter:</span></div>
-                     <div class="col-sm-10"><p class="small"><a href="contacts.html#!">https://twitter.com/samanderson</a></p></div>
-                  </div>
-                  <div class="row">
-                     <div class="col-sm-2"><span class="font-accident-two-bold uppercase">Facbook:</span></div>
-                     <div class="col-sm-10"><p class="small"><a href="contacts.html#!">https://www.facebook.com/samanderson</a></p></div>
-                  </div>
-                  <div class="row">
-                     <div class="col-sm-2"><span class="font-accident-two-bold uppercase">Linkedin:</span></div>
-                     <div class="col-sm-10"><p class="small"><a href="contacts.html#!">https://www.linkedin.com/samanderson</a></p></div>
-                  </div>
+                  <div class="dividewhite4"></div>
+                  <div id="form-messages"></div>
+                  <form id="ajax-contact" method="post" action="assets/custom/2.2.0/php/form.php.html" class="wpcf7-form">
+                     <div class="field">
+                        <!--<label for="name">Name:</label>-->
+                        <input type="text" id="name" name="name" placeholder="Name" required>
+                     </div>
+
+                     <div class="field">
+                        <!--<label for="email">Email:</label>-->
+                        <input type="email" id="email" name="email" placeholder="Email" required>
+                     </div>
+
+                     <div class="field">
+                        <!--<label for="message">Message:</label>-->
+                        <textarea id="message" name="message" placeholder="Message" rows="7" cols="30"  required></textarea>
+                     </div>
+
+                     <div class="dividewhite2"></div>
+
+                     <div class="field text-center">
+                        <button type="submit" class="btn btn-lg btn-darker">Send Message</button>
+                     </div>
+                  </form>
                </div>
+               <div class="col-md-2">&nbsp;</div>
+               <div class="col-md-12 divider-dynamic"></div>
             </div>
-            <div class="dividewhite1"></div>
 
          </div>
-      </section>
 
-      <!-- Google Map Block -->
-      <section id="contacts-map" class="inner-section" data-section="map"
+         <div class="dividewhite6"></div>
+
+      </section>
+      <!-- /Feedback Block -->
+
+      <!-- Testimonials Block -->
+      <section id="testmonials" class="inner-section bg-color02"
                data-animation-origin="top"
                data-animation-duration="500"
                data-animation-delay="500"
                data-animation-distance="25px">
          <div class="container-fluid nopadding">
-            <!-- Google Map -->
-            <div>
-               <div id="gm-panel">
-                  <div id="google-map" class="bigmap"></div>
+
+            <div class="">
+               <h3 class="font-accident-two-normal uppercase text-center">Testimonials</h3>
+               <h5 class="font-accident-two-normal uppercase text-center subtitle">Working hard and making the success</h5>
+               <div class="dividewhite1"></div>
+               <p class="small fontcolor-medium text-center">
+                  Customize your website as you want using different colors and 100% free fonts. Build it from pieces and
+                  blocks as simple as Lego. <br>
+                  Gridus Website Template is fully responsive, looks and works perfect on any device.
+               </p>
+            </div>
+
+            <div class="dividewhite4"></div>
+
+            <div class="row">
+               <div class="col-md-4">
+                  <div class="row">
+                     <div class="col-xs-3">
+                        <img src="../../assets/custom/2.2.0/images/layouts/samuel/userpics/userpic04.jpg" alt="Rachel James Johnes" class="img-responsive img-circle author-userpic">
+                     </div>
+                     <div class="col-xs-9">
+                        <h5 class="font-accident-two-bold text-left uppercase">Hans Zimmer</h5>
+                        <p class="small hovercolor">Apple Inc.</p>
+                        <p class="text-left small">
+                           With more devices come varying screen resolutions, definitions and orientations. New devices
+                           with new screen sizes are being developed every day, and each of these devices may be able...
+                        </p>
+                     </div>
+                  </div>
+                  <div class="divider-dynamic"></div>
+               </div>
+               <div class="col-md-4">
+                  <div class="row">
+                     <div class="col-xs-3">
+                        <img src="../../assets/custom/2.2.0/images/layouts/samuel/userpics/userpic02.jpg" alt="Rachel James Johnes" class="img-responsive img-circle author-userpic">
+                     </div>
+                     <div class="col-xs-9">
+                        <h5 class="font-accident-two-bold text-left uppercase">Mario Quinn</h5>
+                        <p class="small hovercolor">Adobe</p>
+                        <p class="text-left small">
+                           With more devices come varying screen resolutions, definitions and orientations. New devices
+                           with new screen sizes are being developed every day, and each of these devices
+                        </p>
+                     </div>
+                  </div>
+                  <div class="divider-dynamic"></div>
+               </div>
+               <div class="col-md-4">
+                  <div class="row">
+                     <div class="col-xs-3">
+                        <img src="../../assets/custom/2.2.0/images/layouts/samuel/userpics/userpic03.jpg" alt="Rachel James Johnes" class="img-responsive img-circle author-userpic">
+                     </div>
+                     <div class="col-xs-9">
+                        <h5 class="font-accident-two-bold text-left uppercase">Karl Romm</h5>
+                        <p class="small hovercolor">BMW</p>
+                        <p class="text-left small">
+                           With more devices come varying screen resolutions, definitions and orientations. New devices
+                           with new screen sizes are being developed every day, and each of these devices
+                        </p>
+                     </div>
+                  </div>
+                  <div class="divider-dynamic"></div>
                </div>
             </div>
-            <!-- /Google Map -->
+
+            <div class="dividewhite6"></div>
+
          </div>
-         <div class="dividewhite8"></div>
       </section>
-      <!-- /Google Map Block -->
+      <!-- /Testimonials Block -->
 
    </div>
 
@@ -217,9 +294,9 @@
          <div class="col-sm-3 cv-link">
             <h5 class="font-accident-two-bold uppercase">Download cv</h5>
             <div class="dividewhite1"></div>
-            <a href="contacts.html#!"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>English</a>
-            <a href="contacts.html#!"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>German</a>
-            <a href="contacts.html#!"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>Spanish</a>
+            <a href="feedback.html#!"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>English</a>
+            <a href="feedback.html#!"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>German</a>
+            <a href="feedback.html#!"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>Spanish</a>
             <p class="inline-block">
                The CV is in .pdf format. Use the Adobe Reader to open it.
             </p>
@@ -229,18 +306,18 @@
             <h5 class="font-accident-two-bold uppercase">Newsletter</h5>
             <div class="dividewhite1"></div>
             <input class="newsletter-email" type="email" required="" name="ne" placeholder="Your Email">
-            <a href="contacts.html#!" class="btn btn-wh-trans btn-xs">OK</a>
+            <a href="feedback.html#!" class="btn btn-wh-trans btn-xs">OK</a>
             <div class="divider-dynamic"></div>
          </div>
          <div class="col-sm-3">
             <h5 class="font-accident-two-bold uppercase">Follow me</h5>
             <div class="follow">
                <ul class="list-inline social">
-                  <li><a target="_blank" href="contacts.html#" class="rst-icon-facebook"><i class="fa fa-facebook"></i></a></li>
-                  <li><a target="_blank" href="contacts.html#" class="rst-icon-twitter"><i class="fa fa-twitter"></i></a></li>
-                  <li><a target="_blank" href="contacts.html#" class="rst-icon-pinterest"><i class="fa fa-pinterest"></i></a></li>
-                  <li><a target="_blank" href="contacts.html#" class="rst-icon-instagram"><i class="fa fa-instagram"></i></a></li>
-                  <li><a target="_blank" href="contacts.html#" class="rst-icon-youtube"><i class="fa fa-youtube"></i></a></li>
+                  <li><a target="_blank" href="feedback.html#" class="rst-icon-facebook"><i class="fa fa-facebook"></i></a></li>
+                  <li><a target="_blank" href="feedback.html#" class="rst-icon-twitter"><i class="fa fa-twitter"></i></a></li>
+                  <li><a target="_blank" href="feedback.html#" class="rst-icon-pinterest"><i class="fa fa-pinterest"></i></a></li>
+                  <li><a target="_blank" href="feedback.html#" class="rst-icon-instagram"><i class="fa fa-instagram"></i></a></li>
+                  <li><a target="_blank" href="feedback.html#" class="rst-icon-youtube"><i class="fa fa-youtube"></i></a></li>
                </ul>
             </div>
             <div class="divider-dynamic"></div>
