--- a/framework/layouts/samuel/portfolio-4-col.html
+++ b/framework/layouts/samuel/portfolio-4-col.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--[if IE 9]>
+<!frameworkf IE 9]>
 <html class="ie9" lang="en">    <![endif]-->
-<!--[if IE 8]>
+<!frameworkf IE 8]>
 <html class="ie8" lang="en">    <![endif]-->
 <head>
    <meta charset="UTF-8">
