--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+{% include head.html %}
 <body>
 
+{% include header.html %}
+{% include navigation.html %}
+
+{{ content }}
+
+{% include footer.html %}
+{% include foot.html %}
 </body>
 </html>
